syntax = "proto3";
option java_package = "com.hodoan.ble_sdk";
option java_outer_classname = "ProtobufModel";

message BluetoothBLEModel {
    string id = 1;
    string name = 2;
    bool bonded = 3;
}

message ServicesDiscovered{
    repeated string data = 1;
}

message CharacteristicValue {
    string serviceId = 1;
    string characteristicId = 2;
    repeated int32 data = 4 [packed=true];
}

enum StateConnect {
    CONNECTING = 0;
    CONNECTED = 1;
    DISCONNECTING = 2;
    DISCONNECTED = 3;
}

enum StateBluetooth {
    TURING_ON = 0;
    ON = 1;
    TURING_OFF = 2;
    OFF = 3;
    NOT_SUPPORT = 4;
}